Gap fix

--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,6 @@ textarea {
   height: 100vh;
   background: var(--background-primary);
   grid-template-rows: repeat(15, 1fr);
-  gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr 1rem 1fr 1fr;
 }
 
